fix fdo#42178: crash when printing from Page Preview